[package]
name = "rand_core"
version = "0.10.0-rc-4"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand_core"
documentation = "https://docs.rs/rand_core"
homepage = "https://rust-random.github.io/book"
description = "Core random number generation traits and tools for implementation."
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]
edition = "2024"
rust-version = "1.85"
exclude = ["/.github"]

[package.metadata.docs.rs]
# To build locally:
# cargo +nightly doc --open
rustdoc-args = ["--generate-link-to-definition"]
